Navbar homepage full responsive

--- a/index.html
+++ b/index.html
@@ -5,8 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/styles.css">
+    <script src="https://kit.fontawesome.com/d6bf1861cd.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 </head>
 <body>
+
+    <nav>
+        <h5>Root it</h5>
+        <div class="navbar-icons-box">
+            <a href="#"><i class="fas fa-search"><span class="d-none-sm-lg">SEARCH</span></i></a>
+            <a href="#"><i class="fas fa-user"><span class="d-none-sm-lg">ABOUT</span></i></a>
+            <a href="#"><i class="fas fa-bars"><span class="d-none-sm-lg">MORE</span></i></a>
+        </div>
+    </nav>
+
+    <main></main>
+
+    <footer></footer>
     
 </body>
 </html>
