--- a/home.html
+++ b/home.html
@@ -11,17 +11,27 @@
 <body>
 
     <nav>
-        <h5>Root it</h5>
+        <div>
+            <img class="logo" src="css/images/logo.png" alt="">
+            <h5>Root it</h5>
+        </div>
         <div class="navbar-icons-box">
             <a href="#"><i class="fas fa-search"><span class="d-none-sm-lg">SEARCH</span></i></a>
             <a href="#"><i class="fas fa-user"><span class="d-none-sm-lg">ABOUT</span></i></a>
             <a href="#"><i class="fas fa-bars"><span class="d-none-sm-lg">MORE</span></i></a>
         </div>
     </nav>
-
-    <main></main>
-
-    <footer></footer>
-    
+    <main>
+        <div class="search-main-box">
+            <h2>Lorem, ipsum dolor sit amet consectetur adipisicing.</h2>
+            <div class="search-box">
+                <h5>SEARCH BY KEY WORD:</h5>
+                <form class="input-box"  action="#">
+                    <input class="float-left-md" type="text">
+                    <button class="float-left-md" type="submit">SEARCH</button>
+                </form>
+            </div>
+        </div>
+    </main>    
 </body>
 </html>
