--- a/result.html
+++ b/result.html
@@ -24,36 +24,137 @@
     </nav>
     <main>
         <div class="row results-main-box m-auto">
-          <div id="house-1" class="carousel slide col-" data-interval="false"">
-            <ol class="carousel-indicators">
-              <li data-target="#house-1" data-slide-to="0" class="active"></li>
-              <li data-target="#house-1" data-slide-to="1"></li>
-              <li data-target="#house-1" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="css/images/Nueva carpeta/house-2-1.jpg" class="d-block p-0 m-0" alt="...">
+          <div class="results col- col-md-6 col-xl-4">
+            <div id="house-1" class="carousel slide" data-interval="false"">
+              <ol class="carousel-indicators">
+                <li data-target="#house-1" data-slide-to="0" class="active"></li>
+                <li data-target="#house-1" data-slide-to="1"></li>
+                <li data-target="#house-1" data-slide-to="2"></li>
+              </ol>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="css/images/Nueva carpeta/house-2-1.jpg" class="d-block p-0 m-0" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="css/images/Nueva carpeta/house-2-2.jpg" class="d-block p-0 m-0" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="css/images/Nueva carpeta/house-2-3.jpg" class="d-block p-0 m-0" alt="...">
+                </div>
               </div>
-              <div class="carousel-item">
-                <img src="css/images/Nueva carpeta/house-2-2.jpg" class="d-block p-0 m-0" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="css/images/Nueva carpeta/house-2-3.jpg" class="d-block p-0 m-0" alt="...">
-              </div>
+              <a class="carousel-control-prev" href="#house-1" role="button" data-slide="prev">
+                <span><i class="fa fa-angle-left"></i></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#house-1" role="button" data-slide="next">
+                <span><i class="fa fa-angle-right"></i></span>
+                <span class="sr-only">Next</span>
+              </a>
             </div>
-            <a class="carousel-control-prev" href="#house-1" role="button" data-slide="prev">
-              <span><i class="fa fa-angle-left"></i></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#house-1" role="button" data-slide="next">
-              <span><i class="fa fa-angle-right"></i></span>
-              <span class="sr-only">Next</span>
-            </a>
+            <div class="result-text-box mt-0">
+              <h3>Casa en bosquecinos</h3>
+              <p class="description">QUINTAS SAN ISIDRO, TORREÓN, COAHUILA DE ZARAGOZA</p>
+              <p class="mb-0">$ 15,000 MXN</p>
+            </div>
           </div>
-          <div class="result-text-box mt-0">
-            <h3>Casa en bosquecinos</h3>
-            <p class="description">QUINTAS SAN ISIDRO, TORREÓN, COAHUILA DE ZARAGOZA</p>
-            <p class="mb-0">$ 15,000 MXN</p>
+          <div class="results col- col-md-6 col-xl-4">
+            <div id="house-1" class="carousel slide" data-interval="false"">
+              <ol class="carousel-indicators">
+                <li data-target="#house-1" data-slide-to="0" class="active"></li>
+                <li data-target="#house-1" data-slide-to="1"></li>
+                <li data-target="#house-1" data-slide-to="2"></li>
+              </ol>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="css/images/Nueva carpeta/house-2-1.jpg" class="d-block p-0 m-0" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="css/images/Nueva carpeta/house-2-2.jpg" class="d-block p-0 m-0" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="css/images/Nueva carpeta/house-2-3.jpg" class="d-block p-0 m-0" alt="...">
+                </div>
+              </div>
+              <a class="carousel-control-prev" href="#house-1" role="button" data-slide="prev">
+                <span><i class="fa fa-angle-left"></i></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#house-1" role="button" data-slide="next">
+                <span><i class="fa fa-angle-right"></i></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
+            <div class="result-text-box mt-0">
+              <h3>Casa en bosquecinos</h3>
+              <p class="description">QUINTAS SAN ISIDRO, TORREÓN, COAHUILA DE ZARAGOZA</p>
+              <p class="mb-0">$ 15,000 MXN</p>
+            </div>
+          </div>
+          <div class="results col- col-md-6 col-xl-4">
+            <div id="house-1" class="carousel slide" data-interval="false"">
+              <ol class="carousel-indicators">
+                <li data-target="#house-1" data-slide-to="0" class="active"></li>
+                <li data-target="#house-1" data-slide-to="1"></li>
+                <li data-target="#house-1" data-slide-to="2"></li>
+              </ol>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="css/images/Nueva carpeta/house-2-1.jpg" class="d-block p-0 m-0" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="css/images/Nueva carpeta/house-2-2.jpg" class="d-block p-0 m-0" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="css/images/Nueva carpeta/house-2-3.jpg" class="d-block p-0 m-0" alt="...">
+                </div>
+              </div>
+              <a class="carousel-control-prev" href="#house-1" role="button" data-slide="prev">
+                <span><i class="fa fa-angle-left"></i></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#house-1" role="button" data-slide="next">
+                <span><i class="fa fa-angle-right"></i></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
+            <div class="result-text-box mt-0">
+              <h3>Casa en bosquecinos</h3>
+              <p class="description">QUINTAS SAN ISIDRO, TORREÓN, COAHUILA DE ZARAGOZA</p>
+              <p class="mb-0">$ 15,000 MXN</p>
+            </div>
+          </div>
+          <div class="results col- col-md-6 col-xl-4">
+            <div id="house-1" class="carousel slide" data-interval="false"">
+              <ol class="carousel-indicators">
+                <li data-target="#house-1" data-slide-to="0" class="active"></li>
+                <li data-target="#house-1" data-slide-to="1"></li>
+                <li data-target="#house-1" data-slide-to="2"></li>
+              </ol>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="css/images/Nueva carpeta/house-2-1.jpg" class="d-block p-0 m-0" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="css/images/Nueva carpeta/house-2-2.jpg" class="d-block p-0 m-0" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="css/images/Nueva carpeta/house-2-3.jpg" class="d-block p-0 m-0" alt="...">
+                </div>
+              </div>
+              <a class="carousel-control-prev" href="#house-1" role="button" data-slide="prev">
+                <span><i class="fa fa-angle-left"></i></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#house-1" role="button" data-slide="next">
+                <span><i class="fa fa-angle-right"></i></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
+            <div class="result-text-box mt-0">
+              <h3>Casa en bosquecinos</h3>
+              <p class="description">QUINTAS SAN ISIDRO, TORREÓN, COAHUILA DE ZARAGOZA</p>
+              <p class="mb-0">$ 15,000 MXN</p>
+            </div>
           </div>
         </div>  
     </main>
