--- a/detail.html
+++ b/detail.html
@@ -24,28 +24,64 @@
     </nav>
     <main class="detail-result-main-box">
         <div class="detail-result-1">
-            <div id="house-1" class="carousel slide" data-ride="carousel">
+            <div id="detail-house-1" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
-                    <li data-target="#house-1" data-slide-to="0" class="active"></li>
-                    <li data-target="#house-1" data-slide-to="1"></li>
-                    <li data-target="#house-1" data-slide-to="2"></li>
+                    <li data-target="#detail-house-1" data-slide-to="0" class="active"></li>
+                    <li data-target="#detail-house-1" data-slide-to="1"></li>
+                    <li data-target="#detail-house-1" data-slide-to="2"></li>
+                    <li data-target="#detail-house-1" data-slide-to="3"></li>
+                    <li data-target="#detail-house-1" data-slide-to="4"></li>
+                    <li data-target="#detail-house-1" data-slide-to="5"></li>
+                    <li data-target="#detail-house-1" data-slide-to="6" class="active"></li>
+                    <li data-target="#detail-house-1" data-slide-to="7"></li>
+                    <li data-target="#detail-house-1" data-slide-to="8"></li>
+                    <li data-target="#detail-house-1" data-slide-to="9"></li>
+                    <li data-target="#detail-house-1" data-slide-to="10"></li>
+                    <li data-target="#detail-house-1" data-slide-to="11"></li>
                 </ol>
                 <div class="carousel-inner">
-                    <div class="carousel-item carousel-detail-item active">
+                    <div class="carousel-item detail-carousel-item active">
                         <img src="css/images/houses/house-1/1.jpg" class="d-block p-0 m-0" alt="...">
                     </div>
-                    <div class="carousel-item carousel-detail-item">
+                    <div class="carousel-item detail-carousel-item">
                         <img src="css/images/houses/house-1/2.jpg" class="d-block p-0 m-0" alt="...">
                     </div>
-                    <div class="carousel-item carousel-detail-item">
+                    <div class="carousel-item detail-carousel-item">
                         <img src="css/images/houses/house-1/3.jpg" class="d-block p-0 m-0" alt="...">
                     </div>
+                    <div class="carousel-item detail-carousel-item">
+                        <img src="css/images/houses/house-1/4.jpg" class="d-block p-0 m-0" alt="...">
+                    </div>
+                    <div class="carousel-item detail-carousel-item">
+                        <img src="css/images/houses/house-1/5.jpg" class="d-block p-0 m-0" alt="...">
+                    </div>
+                    <div class="carousel-item detail-carousel-item">
+                        <img src="css/images/houses/house-1/6.jpg" class="d-block p-0 m-0" alt="...">
+                    </div>
+                    <div class="carousel-item detail-carousel-item">
+                        <img src="css/images/houses/house-1/7.jpg" class="d-block p-0 m-0" alt="...">
+                    </div>
+                    <div class="carousel-item detail-carousel-item">
+                        <img src="css/images/houses/house-1/8.jpg" class="d-block p-0 m-0" alt="...">
+                    </div>
+                    <div class="carousel-item detail-carousel-item">
+                        <img src="css/images/houses/house-1/9.jpg" class="d-block p-0 m-0" alt="...">
+                    </div>
+                    <div class="carousel-item detail-carousel-item">
+                        <img src="css/images/houses/house-1/10.jpg" class="d-block p-0 m-0" alt="...">
+                    </div>
+                    <div class="carousel-item detail-carousel-item">
+                        <img src="css/images/houses/house-1/11.jpg" class="d-block p-0 m-0" alt="...">
+                    </div>
+                    <div class="carousel-item detail-carousel-item">
+                        <img src="css/images/houses/house-1/12.jpg" class="d-block p-0 m-0" alt="...">
+                    </div>
                 </div>
-                <a class="carousel-control-prev" href="#house-1" role="button" data-slide="prev">
+                <a class="carousel-control-prev" href="#detail-house-1" role="button" data-slide="prev">
                     <span><i class="fa fa-angle-left"></i></span>
                     <span class="sr-only">Previous</span>
                 </a>
-                <a class="carousel-control-next" href="#house-1" role="button" data-slide="next">
+                <a class="carousel-control-next" href="#detail-house-1" role="button" data-slide="next">
                     <span><i class="fa fa-angle-right"></i></span>
                     <span class="sr-only">Next</span>
                 </a>
@@ -54,37 +90,54 @@
 
         <div class="description-main-box">
             <div class="icons-description-box">
-                <a href="#"><i class="fab fa-facebook"></i></a>
-                <a href="#"><i class="fab fa-whatsapp"></i></a>
-                <a href="#"><i class="far fa-envelope"></i></a>
-                <a href="#"><i class="fas fa-print"></i></a>
+                <a href="#" class="text-decoration-none"><i class="fab fa-facebook"></i></a>
+                <a href="#" class="text-decoration-none"><i class="fab fa-whatsapp"></i></a>
+                <a href="#" class="text-decoration-none"><i class="far fa-envelope"></i></a>
+                <a href="#" class="text-decoration-none"><i class="fas fa-print"></i></a>
             </div>
-            <h2>Description del inmueble</h2>
-            <p>Casa en renta en San Felipe Hueyotlipan Primer Piso: Sala-comedor Cocina integral ( sin estufa) Baño completo Cuarto de servicio 2 cajones de estacionamiento Segundo piso: 3 recamaras Estudio Sala de TV Baño completo</p>
-            <ul>
-                <li>Precio</li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
-            <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
+            <h2>Property description</h2>
+            <p>Residencia en Renta en Fraccionamiento Quintas San Isidro, Ubicada en cerrada privada con control de acceso, Cochera eléctrica para 2 autos, Sala, Comedor, Antecomedor, medio baño, Cocina Integral con estufa, Gran Patio estilo Español y equipado con asador empotrado. Pequeño cuartito de almacenamiento o bodega. Tres recamaras en planta alta, la recamara principal con baño privado y vestidor, las otras dos recamaras cuentan con closets. Closet para blancos, área para TV. Casa equipada con aparato de aire lavado, Boiler, Hidro, cocina integral con estufa, closets. Ubicación cercana a Blvd. Prolongación Independencia, a 3 minutos de Walmart, Galerias, Hoteles, Centros comerciales, Colegios, Bancos, Restaurantes internacionales.</p>
+            <h3>General data</h3>
+            <div class="general-data-box">
+                <ul>
+                    <li><i class="fas fa-bed"></i><Span>Rooms:</Span></li>
+                    <li><i class="fas fa-toilet"></i><Span>Bathrooms:</Span></li>
+                    <li><i class="fas fa-dollar-sign"></i><Span>Price:</Span></li>
+                </ul>
+                <ul>
+                    <li><i class="fas fa-car"></i><Span>Parking lots:</Span></li>
+                    <li><i class="fas fa-mountain"></i><Span>Land meters:</Span></li>
+                    <li><i class="fas fa-vihara"></i><Span>Levels:</Span></li>
+                </ul>    
+            </div>
+            <h3>Video</h3>
+            <div class="video-box">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/BWB4UF9fLyQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <h3>Location</h3>
+            <div class="location-box">
+                <div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=Calle%20Ej%C3%A9rcito%20Mexicano%20319%2C%20Luis%20Echeverr%C3%ADa%2C%2094298%20Veracruz%2C%20Ver.&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.whatismyip-address.com"></a></div><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div>
+            </div>
+            <h3>For more information</h3>
+            <div>
+                <form>
+                    <div class="form-group">
+                        <label for="formGroupExampleInput">Example label</label>
+                        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input">
+                    </div>
+                    <div class="form-group">
+                        <label for="formGroupExampleInput2">Another label</label>
+                        <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input">
+                    </div>
+                </form>
+            </div>
         </div>
     </main>
-    
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </body>
 </html>
 
 
 
-<div class="carousel-item active">
-    <img class="d-block" src="#" data-src="css/images/houses/house-1/1.jpg" alt="...">
-</div>
