General information-detail section full style

--- a/detail.html
+++ b/detail.html
@@ -87,7 +87,6 @@
                 </a>
             </div>    
         </div>
-
         <div class="description-main-box">
             <div class="icons-description-box">
                 <a href="#" class="text-decoration-none"><i class="fab fa-facebook"></i></a>
@@ -95,41 +94,48 @@
                 <a href="#" class="text-decoration-none"><i class="far fa-envelope"></i></a>
                 <a href="#" class="text-decoration-none"><i class="fas fa-print"></i></a>
             </div>
-            <h2>Property description</h2>
-            <p>Residencia en Renta en Fraccionamiento Quintas San Isidro, Ubicada en cerrada privada con control de acceso, Cochera eléctrica para 2 autos, Sala, Comedor, Antecomedor, medio baño, Cocina Integral con estufa, Gran Patio estilo Español y equipado con asador empotrado. Pequeño cuartito de almacenamiento o bodega. Tres recamaras en planta alta, la recamara principal con baño privado y vestidor, las otras dos recamaras cuentan con closets. Closet para blancos, área para TV. Casa equipada con aparato de aire lavado, Boiler, Hidro, cocina integral con estufa, closets. Ubicación cercana a Blvd. Prolongación Independencia, a 3 minutos de Walmart, Galerias, Hoteles, Centros comerciales, Colegios, Bancos, Restaurantes internacionales.</p>
-            <h3>General data</h3>
             <div class="general-data-box">
-                <ul>
-                    <li><i class="fas fa-bed"></i><Span>Rooms:</Span></li>
-                    <li><i class="fas fa-toilet"></i><Span>Bathrooms:</Span></li>
-                    <li><i class="fas fa-dollar-sign"></i><Span>Price:</Span></li>
-                </ul>
-                <ul>
-                    <li><i class="fas fa-car"></i><Span>Parking lots:</Span></li>
-                    <li><i class="fas fa-mountain"></i><Span>Land meters:</Span></li>
-                    <li><i class="fas fa-vihara"></i><Span>Levels:</Span></li>
-                </ul>    
+                <h3>General information</h3>
+                <div >
+                    <table >
+                        <tr>
+                            <td class="input"><i class="fas fa-dollar-sign"></i></td>
+                            <td><span>Price:</span></td>
+                            <td class="input"><span>$ 16,000 MXN</span></td>
+                        </tr>
+                        <tr>
+                            <td class="input"><i class="fas fa-vihara"></i></td>
+                            <td><Span>Levels:</Span></td>
+                            <td class="input"><span>2</span></td>
+                        </tr>
+                        <tr>
+                            <td class="input"><i class="fas fa-car"></i></td>
+                            <td><Span>Parking lots:</Span></td>
+                            <td class="input"><span>2</span></td>
+                        </tr>
+                    </table>
+                    <table >
+                        <tr>
+                            <td class="input"><i class="fas fa-mountain"></i></td>
+                            <td><Span>Land meters:</Span></td>
+                            <td class="input"><span>150 m2</span></td>
+                        </tr>
+                        <tr>
+                            <td class="input"><i class="fas fa-bed"></i></td>
+                            <td><span>Rooms:</span></td>
+                            <td class="input"><span class="input">4</span></td>
+                        </tr>
+                        <tr>
+                            <td class="input"><i class="fas fa-toilet"></i></td>
+                            <td><span>Bathrooms:</span></td>
+                            <td class="input"><span class="input">3</span></td>
+                        </tr>    
+                    </table>
+                </div>    
             </div>
-            <h3>Video</h3>
-            <div class="video-box">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/BWB4UF9fLyQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-            <h3>Location</h3>
-            <div class="location-box">
-                <div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=Calle%20Ej%C3%A9rcito%20Mexicano%20319%2C%20Luis%20Echeverr%C3%ADa%2C%2094298%20Veracruz%2C%20Ver.&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.whatismyip-address.com"></a></div><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div>
-            </div>
-            <h3>For more information</h3>
-            <div>
-                <form>
-                    <div class="form-group">
-                        <label for="formGroupExampleInput">Example label</label>
-                        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input">
-                    </div>
-                    <div class="form-group">
-                        <label for="formGroupExampleInput2">Another label</label>
-                        <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input">
-                    </div>
-                </form>
+            <div class="description-box">
+                <h3>Description</h3>
+                <p>Residencia en Renta en Fraccionamiento Quintas San Isidro, Ubicada en cerrada privada con control de acceso, Cochera eléctrica para 2 autos, Sala, Comedor, Antecomedor, medio baño, Cocina Integral con estufa, Gran Patio estilo Español y equipado con asador empotrado. Pequeño cuartito de almacenamiento o bodega. Tres recamaras en planta alta, la recamara principal con baño privado y vestidor, las otras dos recamaras cuentan con closets. Closet para blancos, área para TV. Casa equipada con aparato de aire lavado, Boiler, Hidro, cocina integral con estufa, closets. Ubicación cercana a Blvd. Prolongación Independencia, a 3 minutos de Walmart, Galerias, Hoteles, Centros comerciales, Colegios, Bancos, Restaurantes internacionales.</p>    
             </div>
         </div>
     </main>
