--- a/detail.html
+++ b/detail.html
@@ -137,6 +137,33 @@
                 <h3>Description</h3>
                 <p>Residencia en Renta en Fraccionamiento Quintas San Isidro, Ubicada en cerrada privada con control de acceso, Cochera eléctrica para 2 autos, Sala, Comedor, Antecomedor, medio baño, Cocina Integral con estufa, Gran Patio estilo Español y equipado con asador empotrado. Pequeño cuartito de almacenamiento o bodega. Tres recamaras en planta alta, la recamara principal con baño privado y vestidor, las otras dos recamaras cuentan con closets. Closet para blancos, área para TV. Casa equipada con aparato de aire lavado, Boiler, Hidro, cocina integral con estufa, closets. Ubicación cercana a Blvd. Prolongación Independencia, a 3 minutos de Walmart, Galerias, Hoteles, Centros comerciales, Colegios, Bancos, Restaurantes internacionales.</p>    
             </div>
+            <div class="video-box">
+                <h3>Video</h3>
+                <div class="video">
+                    <iframe src="https://www.youtube.com/embed/BWB4UF9fLyQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </div>
+            <div  class="location-box">
+                <h3>Location</h3>
+                <div class="google-map">
+                    <iframe src="https://maps.google.com/maps?q=Calle%20Ej%C3%A9rcito%20Mexicano%20319%2C%20Luis%20Echeverr%C3%ADa%2C%2094298%20Veracruz%2C%20Ver.&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+                </div>
+            </div>
+            <div>
+                <h3>For more information</h3>
+                <div>
+                    <form>
+                        <div class="form-group">
+                            <label for="formGroupExampleInput">Example label</label>
+                            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input">
+                        </div>
+                        <div class="form-group">
+                            <label for="formGroupExampleInput2">Another label</label>
+                            <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input">
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
     </main>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
