Adjusting height on cards text-container in results file

--- a/result.html
+++ b/result.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
 </head>
-<body>
+<body class="body-results">
     <nav class="nav mb-4">
         <div class="navbar-logo-box">
             <img class="logo" src="css/images/logo.png" alt="logo">
