Making navbar more functional

--- a/home.html
+++ b/home.html
@@ -11,18 +11,18 @@
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
 </head>
 <body class="body-home">
-
-    <nav class="nav">
-        <div class="navbar-logo-box">
-            <img class="logo" src="css/images/logo.png" alt="logo">
-            <h5>Root it</h5>
-        </div>
-        <div class="navbar-icons-box">
-            <a href="#"><i class="fas fa-search"><span class="d-none-sm-lg">SEARCH</span></i></a>
-            <a href="#"><i class="fas fa-user"><span class="d-none-sm-lg">ABOUT</span></i></a>
-            <a href="#"><i class="fas fa-bars"><span class="d-none-sm-lg">MORE</span></i></a>
-        </div>
-    </nav>
+    <header>
+        <nav class="nav">
+            <div class="navbar-logo-box">
+                <img class="logo" src="css/images/logo.png" alt="logo">
+                <h5>Root it</h5>
+            </div>
+            <div class="navbar-icons-box">
+                <a href="home.html"><i class="fas fa-search"><span class="d-none-sm-lg">SEARCH</span></i></a>
+                <a href="result.html"><i class="fas fa-poll"><span class="d-none-sm-lg">TREND</span></i></a>
+            </div>
+        </nav>    
+    </header>
     <main>
         <div class="search-main-box">
             <h2>Lorem, ipsum dolor sit amet consectetur adipisicing.</h2>
