Adding titles to all pages

--- a/detail.html
+++ b/detail.html
@@ -24,6 +24,7 @@
         </nav>    
     </header>
     <main class="detail-result-main-box">
+        <h1>Welcome to your new home.</h1>
         <div class="detail-result-1">
             <div id="detail-house-1" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
