--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
     </header>
     <main>
         <div class="search-main-box">
-            <h2>Lorem, ipsum dolor sit amet consectetur adipisicing.</h2>
+            <h1>Welcome to your new home.</h1>
             <div class="search-box">
                  <div class="selectors-box ">
                     <select class="browser-default custom-select type-selector">
@@ -49,7 +49,7 @@
                         <option value="3">Merida</option>
                         <option value="3">Veracruz</option>
                     </select>
-                    <button class="" type="submit">SEARCH</button>
+                    <a href="result.html"><button class="" type="submit">SEARCH</button></a>
                 </div>
             </div>
         </div>
