--- a/result.html
+++ b/result.html
@@ -35,13 +35,13 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item result-carousel-item active">
-              <a href="#"><img src="css/images/houses/house-1/1.jpg" class="d-block p-0 m-0" alt="..."></a>
+              <a href="detail.html"><img src="css/images/houses/house-1/1.jpg" class="d-block p-0 m-0" alt="..."></a>
             </div>
             <div class="carousel-item result-carousel-item">
-              <a href="#"><img src="css/images/houses/house-1/2.jpg" class="d-block p-0 m-0" alt="..."></a>
+              <a href="detail.html"><img src="css/images/houses/house-1/2.jpg" class="d-block p-0 m-0" alt="..."></a>
             </div>
             <div class="carousel-item result-carousel-item">
-              <a href="#"><img src="css/images/houses/house-1/3.jpg" class="d-block p-0 m-0" alt="..."></a>
+              <a href="detail.html"><img src="css/images/houses/house-1/3.jpg" class="d-block p-0 m-0" alt="..."></a>
             </div>
           </div>
           <a class="carousel-control-prev" href="#house-1" role="button" data-slide="prev">
@@ -54,7 +54,7 @@
           </a>
         </div>
         <div class="result-text-box mt-0">
-          <a href="#" class="text-decoration-none"><h3>Casa en bosquecinos</h3></a>
+          <a href="detail.html" class="text-decoration-none"><h3>Casa en bosquecinos</h3></a>
           <p class="description">QUINTAS SAN ISIDRO, TORREÓN, COAHUILA DE ZARAGOZA</p>
           <p class="mb-0">$ 15,000 MXN</p>
         </div>
@@ -68,13 +68,13 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item result-carousel-item active">
-              <img src="css/images/houses/house-2/1.jpeg" class="d-block p-0 m-0" alt="...">
+              <a href="detail.html"><img src="css/images/houses/house-2/1.jpeg" class="d-block p-0 m-0" alt="..."></a>
             </div>
             <div class="carousel-item result-carousel-item">
-              <img src="css/images/houses/house-2/2.jpeg" class="d-block p-0 m-0" alt="...">
+              <a href="detail.html"><img src="css/images/houses/house-2/2.jpeg" class="d-block p-0 m-0" alt="..."></a>
             </div>
             <div class="carousel-item result-carousel-item">
-              <img src="css/images/houses/house-2/3.jpeg" class="d-block p-0 m-0" alt="...">
+              <a href="detail.html"><img src="css/images/houses/house-2/3.jpeg" class="d-block p-0 m-0" alt="..."></a>
             </div>
           </div>
           <a class="carousel-control-prev" href="#house-2" role="button" data-slide="prev">
@@ -87,7 +87,7 @@
           </a>
         </div>
         <div class="result-text-box mt-0">
-          <h3>Casa en San Felipe</h3>
+          <a href="detail.html" class="text-decoration-none"><h3>Casa en San Felipe</h3></a>
           <p class="description">SAN FELIPE HUEYOTLIPAN, PUEBLA, PUEBLA</p>
           <p class="mb-0">$ 6,500 MXN</p>
         </div>
@@ -101,13 +101,13 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item result-carousel-item active">
-              <img src="css/images/houses/house-3/1.jpeg" class="d-block p-0 m-0" alt="...">
+              <a href="detail.html"><img src="css/images/houses/house-3/1.jpeg" class="d-block p-0 m-0" alt="..."></a>
             </div>
             <div class="carousel-item result-carousel-item">
-              <img src="css/images/houses/house-3/2.jpeg" class="d-block p-0 m-0" alt="...">
+              <a href="detail.html"><img src="css/images/houses/house-3/2.jpeg" class="d-block p-0 m-0" alt="..."></a>
             </div>
             <div class="carousel-item result-carousel-item">
-              <img src="css/images/houses/house-3/3.jpeg" class="d-block p-0 m-0" alt="...">
+              <a href="detail.html"><img src="css/images/houses/house-3/3.jpeg" class="d-block p-0 m-0" alt="..."></a>
             </div>
           </div>
           <a class="carousel-control-prev" href="#house-3" role="button" data-slide="prev">
@@ -120,7 +120,7 @@
           </a>
         </div>
         <div class="result-text-box mt-0">
-          <h3>RENTA NAVE INDUSTRIAL</h3>
+          <a href="detail.html" class="text-decoration-none"><h3>RENTA NAVE INDUSTRIAL</h3></a>
           <p class="description">CIUDAD INDUSTRIAL, MÉRIDA, YUCATÁN</p>
           <p class="mb-0">$ 130,000 MXN</p>
         </div>
@@ -134,13 +134,13 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item result-carousel-item active">
-              <img src="css/images/houses/house-4/1.png" class="d-block p-0 m-0" alt="...">
+              <a href="detail.html"><img src="css/images/houses/house-4/1.png" class="d-block p-0 m-0" alt="..."></a>
             </div>
             <div class="carousel-item result-carousel-item">
-              <img src="css/images/houses/house-4/2.jpeg" class="d-block p-0 m-0" alt="...">
+              <a href="detail.html"><img src="css/images/houses/house-4/2.jpeg" class="d-block p-0 m-0" alt="..."></a>
             </div>
             <div class="carousel-item result-carousel-item">
-              <img src="css/images/houses/house-4/3.jpeg" class="d-block p-0 m-0" alt="...">
+              <a href="detail.html"><img src="css/images/houses/house-4/3.jpeg" class="d-block p-0 m-0" alt="..."></a>
             </div>
           </div>
           <a class="carousel-control-prev" href="#house-4" role="button" data-slide="prev">
@@ -153,7 +153,7 @@
           </a>
         </div>
         <div class="result-text-box mt-0">
-          <h3>LEIBNITZ</h3>
+          <a href="detail.html" class="text-decoration-none"><h3>LEIBNITZ</h3></a>
           <p class="description">ANZURES, MIGUEL HIDALGO, CIUDAD DE MÉXICO</p>
           <p class="mb-0">$ 49,500 MXN</p>
         </div>
@@ -167,13 +167,13 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item result-carousel-item active">
-              <img src="css/images/houses/house-5/1.jpg" class="d-block p-0 m-0" alt="...">
+              <a href="detail.html"><img src="css/images/houses/house-5/1.jpg" class="d-block p-0 m-0" alt="..."></a>
             </div>
             <div class="carousel-item result-carousel-item">
-              <img src="css/images/houses/house-5/2.jpg" class="d-block p-0 m-0" alt="...">
+              <a href="detail.html"><img src="css/images/houses/house-5/2.jpg" class="d-block p-0 m-0" alt="..."></a>
             </div>
             <div class="carousel-item result-carousel-item">
-              <img src="css/images/houses/house-5/3.jpg" class="d-block p-0 m-0" alt="...">
+              <a href="detail.html"><img src="css/images/houses/house-5/3.jpg" class="d-block p-0 m-0" alt="..."></a>
             </div>
           </div>
           <a class="carousel-control-prev" href="#house-5" role="button" data-slide="prev">
@@ -186,7 +186,7 @@
           </a>
         </div>
         <div class="result-text-box mt-0">
-          <h3>CASA EN RENTA EN HUIXQUILUCAN</h3>
+          <a href="detail.html" class="text-decoration-none"><h3>CASA EN RENTA EN HUIXQUILUCAN</h3></a>
           <p class="description">SAN BARTOLOMÉ COATEPEC, HUIXQUILUCAN, ESTADO DE MÉXICO</p>
           <p class="mb-0">$ 19,500 MXN</p>
         </div>
@@ -200,13 +200,13 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item result-carousel-item active">
-              <img src="css/images/houses/house-6/1.jpg" class="d-block p-0 m-0" alt="...">
+              <a href="detail.html"><img src="css/images/houses/house-6/1.jpg" class="d-block p-0 m-0" alt="..."></a>
             </div>
             <div class="carousel-item result-carousel-item">
-              <img src="css/images/houses/house-6/2.jpg" class="d-block p-0 m-0" alt="...">
+              <a href="detail.html"><img src="css/images/houses/house-6/2.jpg" class="d-block p-0 m-0" alt="..."></a>
             </div>
             <div class="carousel-item result-carousel-item">
-              <img src="css/images/houses/house-6/3.jpg" class="d-block p-0 m-0" alt="...">
+              <a href="detail.html"><img src="css/images/houses/house-6/3.jpg" class="d-block p-0 m-0" alt="..."></a>
             </div>
           </div>
           <a class="carousel-control-prev" href="#house-6" role="button" data-slide="prev">
@@ -219,7 +219,7 @@
           </a>
         </div>
         <div class="result-text-box mt-0"> 
-          <h3>CASA EN RENTA J.PANI CD. SATELITE</h3>
+          <a href="detail.html" class="text-decoration-none"><h3>CASA EN RENTA J.PANI CD. SATELITE</h3></a>
           <p class="description">CIUDAD SATÉLITE, NAUCALPAN DE JUÁREZ, ESTADO DE MÉXICO</p>
           <p class="mb-0">$ 35,000 MXN</p>
         </div>
@@ -233,13 +233,13 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item result-carousel-item active">
-              <img src="css/images/houses/house-7/1.jpg" class="d-block p-0 m-0" alt="...">
+              <a href="detail.html"><img src="css/images/houses/house-7/1.jpg" class="d-block p-0 m-0" alt="..."></a>
             </div>
             <div class="carousel-item result-carousel-item">
-              <img src="css/images/houses/house-7/2.jpg" class="d-block p-0 m-0" alt="...">
+              <a href="detail.html"><img src="css/images/houses/house-7/2.jpg" class="d-block p-0 m-0" alt="..."></a>
             </div>
             <div class="carousel-item result-carousel-item">
-              <img src="css/images/houses/house-7/3.jpg" class="d-block p-0 m-0" alt="...">
+              <a href="detail.html"><img src="css/images/houses/house-7/3.jpg" class="d-block p-0 m-0" alt="..."></a>
             </div>
           </div>
           <a class="carousel-control-prev" href="#house-7" role="button" data-slide="prev">
@@ -252,7 +252,7 @@
           </a>
         </div>
         <div class="result-text-box mt-0"> 
-          <h3>Propiedad 784512</h3>
+          <a href="detail.html" class="text-decoration-none"><h3>Propiedad 784512</h3></a>
           <p class="description">BOSQUES DE LA HERRADURA, HUIXQUILUCAN, ESTADO DE MÉXICO</p>
           <p class="mb-0">$ 35,000 MXN</p>
         </div>
@@ -266,13 +266,13 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item result-carousel-item active">
-              <img src="css/images/houses/house-8/1.jpg" class="d-block p-0 m-0" alt="...">
+              <a href="detail.html"><img src="css/images/houses/house-8/1.jpg" class="d-block p-0 m-0" alt="..."></a>
             </div>
             <div class="carousel-item result-carousel-item">
-              <img src="css/images/houses/house-8/2.jpg" class="d-block p-0 m-0" alt="...">
+              <a href="detail.html"><img src="css/images/houses/house-8/2.jpg" class="d-block p-0 m-0" alt="..."></a>
             </div>
             <div class="carousel-item result-carousel-item">
-              <img src="css/images/houses/house-8/3.jpg" class="d-block p-0 m-0" alt="...">
+              <a href="detail.html"><img src="css/images/houses/house-8/3.jpg" class="d-block p-0 m-0" alt="..."></a>
             </div>
           </div>
           <a class="carousel-control-prev" href="#house-8" role="button" data-slide="prev">
@@ -285,7 +285,7 @@
           </a>
         </div>
         <div class="result-text-box mt-0"> 
-          <h3>CASA RENTA FONTANA RESIDENCIAL</h3>
+          <a href="detail.html" class="text-decoration-none"><h3>CASA RENTA FONTANA RESIDENCIAL</h3></a>
           <p class="description">PRIVADA LOS FRANCISCANOS, SANTIAGO, NUEVO LEÓN</p>
           <p class="mb-0">$ 27,500 MXN</p>
         </div>
