Setting vertical aligment on home-page

--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
 </head>
 <body class="body-home">
     <header>
-        <nav class="nav">
+        <nav class="nav navbar-home">
             <div class="navbar-logo-box">
                 <img class="logo" src="css/images/logo.png" alt="logo">
                 <h5>Root it</h5>
@@ -22,12 +22,12 @@
                 <a href="result.html"><i class="fas fa-poll"><span class="d-none-sm-lg">TREND</span></i></a>
             </div>
         </nav>    
-    </header>
+    </header>  
     <main>
         <div class="search-main-box">
             <h1>Welcome to your new home.</h1>
             <div class="search-box">
-                 <div class="selectors-box ">
+                <div class="selectors-box ">
                     <select class="browser-default custom-select type-selector">
                         <option selected>TYPE</option>
                         <option value="1">Apartment</option>
@@ -53,6 +53,8 @@
                 </div>
             </div>
         </div>
-    </main>    
+    </main>
+    <footer class="footer-home">
+    </footer>
 </body>
 </html>
