Adding footer to all pages

--- a/home.html
+++ b/home.html
@@ -54,7 +54,18 @@
             </div>
         </div>
     </main>
-    <footer class="footer-home">
+    <footer class="footer footer-home">
+        <div class="icons-description-box">
+            <a href="#" class="text-decoration-none"><i class="fab fa-facebook-f mr-4"></i></a>
+            <a href="#" class="text-decoration-none"><i class="fab fa-whatsapp mr-4"></i></a>
+            <a href="#" class="text-decoration-none"><i class="far fa-envelope mr-4"></i></a>
+            <a href="#" class="text-decoration-none"><i class="fab fa-twitter mr-4"></i></a>
+            <a href="#" class="text-decoration-none"><i class="fab fa-instagram"></i></a>
+        </div>
+        <ul>
+            <li><a href="#" class="text-decoration-none">Privacy policy</a></li>
+            <li><a href="#" class="text-decoration-none">About us</a></li>
+        </ul>
     </footer>
 </body>
 </html>
