--- a/result.html
+++ b/result.html
@@ -292,7 +292,18 @@
       </div>
     </div>  
   </main>
-  <footer class="footer">
+  <footer class="footer footer-result">
+    <div class="icons-description-box">
+        <a href="#" class="text-decoration-none"><i class="fab fa-facebook-f mr-4"></i></a>
+        <a href="#" class="text-decoration-none"><i class="fab fa-whatsapp mr-4"></i></a>
+        <a href="#" class="text-decoration-none"><i class="far fa-envelope mr-4"></i></a>
+        <a href="#" class="text-decoration-none"><i class="fab fa-twitter mr-4"></i></a>
+        <a href="#" class="text-decoration-none"><i class="fab fa-instagram"></i></a>
+    </div>
+    <ul>
+        <li><a href="#" class="text-decoration-none">Privacy policy</a></li>
+        <li><a href="#" class="text-decoration-none">About us</a></li>
+    </ul>
   </footer>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
