--- a/result.html
+++ b/result.html
@@ -12,17 +12,17 @@
 </head>
 <body class="body-results">
   <header>
-      <nav class="nav">
-          <div class="navbar-logo-box">
-              <img class="logo" src="css/images/logo.png" alt="logo">
-              <h5>Root it</h5>
-          </div>
-          <div class="navbar-icons-box">
-              <a href="home.html"><i class="fas fa-search"><span class="d-none-sm-lg">SEARCH</span></i></a>
-              <a href="result.html"><i class="fas fa-poll"><span class="d-none-sm-lg">TREND</span></i></a>
-          </div>
-      </nav>    
-  </header>
+    <nav class="nav">
+        <div class="navbar-logo-box">
+            <img class="logo" src="css/images/logo.png" alt="logo">
+            <h5 class="white">Root it</h5>
+        </div>
+        <div class="navbar-icons-box">
+            <a href="home.html"><i class="fas fa-search white"><span class="d-none-sm-lg white">SEARCH</span></i></a>
+            <a href="result.html"><i class="fas fa-poll white"><span class="d-none-sm-lg white">TREND</span></i></a>
+        </div>
+    </nav>    
+  </header>  
   <main>
     <h1>Welcome to your new home.</h1>
     <div class="row results-main-box m-auto">
@@ -294,15 +294,15 @@
   </main>
   <footer class="footer footer-result">
     <div class="icons-description-box">
-        <a href="#" class="text-decoration-none"><i class="fab fa-facebook-f mr-4"></i></a>
-        <a href="#" class="text-decoration-none"><i class="fab fa-whatsapp mr-4"></i></a>
-        <a href="#" class="text-decoration-none"><i class="far fa-envelope mr-4"></i></a>
-        <a href="#" class="text-decoration-none"><i class="fab fa-twitter mr-4"></i></a>
-        <a href="#" class="text-decoration-none"><i class="fab fa-instagram"></i></a>
+        <a href="#" class="text-decoration-none"><i class="fab fa-facebook-f mr-4 white"></i></a>
+        <a href="#" class="text-decoration-none"><i class="fab fa-whatsapp mr-4 white"></i></a>
+        <a href="#" class="text-decoration-none"><i class="far fa-envelope mr-4 white"></i></a>
+        <a href="#" class="text-decoration-none"><i class="fab fa-twitter mr-4 white"></i></a>
+        <a href="#" class="text-decoration-none"><i class="fab fa-instagram white"></i></a>
     </div>
     <ul>
-        <li><a href="#" class="text-decoration-none">Privacy policy</a></li>
-        <li><a href="#" class="text-decoration-none">About us</a></li>
+        <li><a href="#" class="text-decoration-none white">Privacy policy</a></li>
+        <li><a href="#" class="text-decoration-none white">About us</a></li>
     </ul>
   </footer>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
