--- a/detail.html
+++ b/detail.html
@@ -15,14 +15,14 @@
         <nav class="nav">
             <div class="navbar-logo-box">
                 <img class="logo" src="css/images/logo.png" alt="logo">
-                <h5>Root it</h5>
+                <h5 class="white">Root it</h5>
             </div>
             <div class="navbar-icons-box">
-                <a href="home.html"><i class="fas fa-search"><span class="d-none-sm-lg">SEARCH</span></i></a>
-                <a href="result.html"><i class="fas fa-poll"><span class="d-none-sm-lg">TREND</span></i></a>
+                <a href="home.html"><i class="fas fa-search white"><span class="d-none-sm-lg white">SEARCH</span></i></a>
+                <a href="result.html"><i class="fas fa-poll white"><span class="d-none-sm-lg white">TREND</span></i></a>
             </div>
         </nav>    
-    </header>
+    </header>  
     <main class="detail-result-main-box">
         <h1>Welcome to your new home.</h1>
         <div class="detail-result-1">
@@ -46,37 +46,37 @@
                         <img src="css/images/houses/house-1/1.jpg" class="d-block p-0 m-0" alt="...">
                     </div>
                     <div class="carousel-item detail-carousel-item">
-                        <img src="css/images/houses/house-1/2.jpg" class="d-block p-0 m-0" alt="...">
+                        <img src="css/images/houses/house-1/2.jpg" class="d-block p-0 m-0 w-100" alt="...">
                     </div>
                     <div class="carousel-item detail-carousel-item">
-                        <img src="css/images/houses/house-1/3.jpg" class="d-block p-0 m-0" alt="...">
+                        <img src="css/images/houses/house-1/3.jpg" class="d-block p-0 m-0 w-100" alt="...">
                     </div>
                     <div class="carousel-item detail-carousel-item">
-                        <img src="css/images/houses/house-1/4.jpg" class="d-block p-0 m-0" alt="...">
+                        <img src="css/images/houses/house-1/4.jpg" class="d-block p-0 m-0 w-100" alt="...">
                     </div>
                     <div class="carousel-item detail-carousel-item">
-                        <img src="css/images/houses/house-1/5.jpg" class="d-block p-0 m-0" alt="...">
+                        <img src="css/images/houses/house-1/5.jpg" class="d-block p-0 m-0 w-100" alt="...">
                     </div>
                     <div class="carousel-item detail-carousel-item">
-                        <img src="css/images/houses/house-1/6.jpg" class="d-block p-0 m-0" alt="...">
+                        <img src="css/images/houses/house-1/6.jpg" class="d-block p-0 m-0 w-100" alt="...">
                     </div>
                     <div class="carousel-item detail-carousel-item">
-                        <img src="css/images/houses/house-1/7.jpg" class="d-block p-0 m-0" alt="...">
+                        <img src="css/images/houses/house-1/7.jpg" class="d-block p-0 m-0 w-100" alt="...">
                     </div>
                     <div class="carousel-item detail-carousel-item">
-                        <img src="css/images/houses/house-1/8.jpg" class="d-block p-0 m-0" alt="...">
+                        <img src="css/images/houses/house-1/8.jpg" class="d-block p-0 m-0 w-100" alt="...">
                     </div>
                     <div class="carousel-item detail-carousel-item">
-                        <img src="css/images/houses/house-1/9.jpg" class="d-block p-0 m-0" alt="...">
+                        <img src="css/images/houses/house-1/9.jpg" class="d-block p-0 m-0 w-100" alt="...">
                     </div>
                     <div class="carousel-item detail-carousel-item">
-                        <img src="css/images/houses/house-1/10.jpg" class="d-block p-0 m-0" alt="...">
+                        <img src="css/images/houses/house-1/10.jpg" class="d-block p-0 m-0 w-100" alt="...">
                     </div>
                     <div class="carousel-item detail-carousel-item">
-                        <img src="css/images/houses/house-1/11.jpg" class="d-block p-0 m-0" alt="...">
+                        <img src="css/images/houses/house-1/11.jpg" class="d-block p-0 m-0 w-100" alt="...">
                     </div>
                     <div class="carousel-item detail-carousel-item">
-                        <img src="css/images/houses/house-1/12.jpg" class="d-block p-0 m-0" alt="...">
+                        <img src="css/images/houses/house-1/12.jpg" class="d-block p-0 m-0 w-100" alt="...">
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#detail-house-1" role="button" data-slide="prev">
@@ -98,7 +98,7 @@
             </div>
             <div class="general-data-box">
                 <h3>General information</h3>
-                <div >
+                <div class="m-auto">
                     <table >
                         <tr>
                             <td class="input"><i class="fas fa-dollar-sign"></i></td>
@@ -143,7 +143,7 @@
                 <div class="video-box col- col-xl-6">
                     <h3>Video</h3>
                     <div class="video">
-                        <iframe src="https://www.youtube.com/embed/BWB4UF9fLyQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe class="w-100 m-auto" src="https://www.youtube.com/embed/BWB4UF9fLyQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>       
             </div>
@@ -151,7 +151,7 @@
                 <div  class="location-box col- col-xl-6">
                     <h3>Location</h3>
                     <div class="google-map">
-                        <iframe src="https://maps.google.com/maps?q=Calle%20Ej%C3%A9rcito%20Mexicano%20319%2C%20Luis%20Echeverr%C3%ADa%2C%2094298%20Veracruz%2C%20Ver.&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+                        <iframe class="w-100 m-auto" src="https://maps.google.com/maps?q=Calle%20Ej%C3%A9rcito%20Mexicano%20319%2C%20Luis%20Echeverr%C3%ADa%2C%2094298%20Veracruz%2C%20Ver.&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
                     </div>
                 </div>
                 <div class="send-message-box col- col-xl-6">
@@ -177,15 +177,15 @@
     </main>
     <footer class="footer footer-detail">
         <div class="icons-description-box">
-            <a href="#" class="text-decoration-none"><i class="fab fa-facebook-f mr-4"></i></a>
-            <a href="#" class="text-decoration-none"><i class="fab fa-whatsapp mr-4"></i></a>
-            <a href="#" class="text-decoration-none"><i class="far fa-envelope mr-4"></i></a>
-            <a href="#" class="text-decoration-none"><i class="fab fa-twitter mr-4"></i></a>
-            <a href="#" class="text-decoration-none"><i class="fab fa-instagram"></i></a>
+            <a href="#" class="text-decoration-none"><i class="fab fa-facebook-f mr-4 white"></i></a>
+            <a href="#" class="text-decoration-none"><i class="fab fa-whatsapp mr-4 white"></i></a>
+            <a href="#" class="text-decoration-none"><i class="far fa-envelope mr-4 white"></i></a>
+            <a href="#" class="text-decoration-none"><i class="fab fa-twitter mr-4 white"></i></a>
+            <a href="#" class="text-decoration-none"><i class="fab fa-instagram white"></i></a>
         </div>
         <ul>
-            <li><a href="#" class="text-decoration-none">Privacy policy</a></li>
-            <li><a href="#" class="text-decoration-none">About us</a></li>
+            <li><a href="#" class="text-decoration-none white">Privacy policy</a></li>
+            <li><a href="#" class="text-decoration-none white">About us</a></li>
         </ul>
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
