--- a/home.html
+++ b/home.html
@@ -12,20 +12,20 @@
 </head>
 <body class="body-home">
     <header>
-        <nav class="nav navbar-home">
+        <nav class="nav navbar-home position-absolute">
             <div class="navbar-logo-box">
                 <img class="logo" src="css/images/logo.png" alt="logo">
-                <h5>Root it</h5>
+                <h5 class="white">Root it</h5>
             </div>
             <div class="navbar-icons-box">
-                <a href="home.html"><i class="fas fa-search"><span class="d-none-sm-lg">SEARCH</span></i></a>
-                <a href="result.html"><i class="fas fa-poll"><span class="d-none-sm-lg">TREND</span></i></a>
+                <a href="home.html"><i class="fas fa-search white"><span class="d-none-sm-lg white">SEARCH</span></i></a>
+                <a href="result.html"><i class="fas fa-poll white"><span class="d-none-sm-lg white">TREND</span></i></a>
             </div>
         </nav>    
     </header>  
     <main>
-        <div class="search-main-box">
-            <h1>Welcome to your new home.</h1>
+        <div class="search-main-box position-absolute">
+            <h1 class="white">Welcome to your new home.</h1>
             <div class="search-box">
                 <div class="selectors-box ">
                     <select class="browser-default custom-select type-selector">
@@ -49,22 +49,22 @@
                         <option value="3">Merida</option>
                         <option value="3">Veracruz</option>
                     </select>
-                    <a href="result.html"><button class="" type="submit">SEARCH</button></a>
+                    <a href="result.html"><button class="white" type="submit">SEARCH</button></a>
                 </div>
             </div>
         </div>
     </main>
-    <footer class="footer footer-home">
+    <footer class="footer footer-home position-absolute">
         <div class="icons-description-box">
-            <a href="#" class="text-decoration-none"><i class="fab fa-facebook-f mr-4"></i></a>
-            <a href="#" class="text-decoration-none"><i class="fab fa-whatsapp mr-4"></i></a>
-            <a href="#" class="text-decoration-none"><i class="far fa-envelope mr-4"></i></a>
-            <a href="#" class="text-decoration-none"><i class="fab fa-twitter mr-4"></i></a>
-            <a href="#" class="text-decoration-none"><i class="fab fa-instagram"></i></a>
+            <a href="#" class="text-decoration-none"><i class="fab fa-facebook-f mr-4 white"></i></a>
+            <a href="#" class="text-decoration-none"><i class="fab fa-whatsapp mr-4 white"></i></a>
+            <a href="#" class="text-decoration-none"><i class="far fa-envelope mr-4 white"></i></a>
+            <a href="#" class="text-decoration-none"><i class="fab fa-twitter mr-4 white"></i></a>
+            <a href="#" class="text-decoration-none"><i class="fab fa-instagram white"></i></a>
         </div>
         <ul>
-            <li><a href="#" class="text-decoration-none">Privacy policy</a></li>
-            <li><a href="#" class="text-decoration-none">About us</a></li>
+            <li><a href="#" class="text-decoration-none white">Privacy policy</a></li>
+            <li><a href="#" class="text-decoration-none white">About us</a></li>
         </ul>
     </footer>
 </body>
