Solving some conflicts with DRY

--- a/result.html
+++ b/result.html
@@ -120,7 +120,7 @@
           </a>
         </div>
         <div class="result-text-box mt-0">
-          <a href="detail.html" class="text-decoration-none"><h3>RENTA NAVE INDUSTRIAL</h3></a>
+          <a href="detail.html" class="text-decoration-none"><h3>Renta nave industrial</h3></a>
           <p class="description">CIUDAD INDUSTRIAL, MÉRIDA, YUCATÁN</p>
           <p class="mb-0">$ 130,000 MXN</p>
         </div>
@@ -134,7 +134,7 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item result-carousel-item active">
-              <a href="detail.html"><img src="css/images/houses/house-4/1.png" class="d-block p-0 m-0" alt="..."></a>
+              <a href="detail.html"><img src="css/images/houses/house-4/1.jpg" class="d-block p-0 m-0" alt="..."></a>
             </div>
             <div class="carousel-item result-carousel-item">
               <a href="detail.html"><img src="css/images/houses/house-4/2.jpeg" class="d-block p-0 m-0" alt="..."></a>
@@ -153,7 +153,7 @@
           </a>
         </div>
         <div class="result-text-box mt-0">
-          <a href="detail.html" class="text-decoration-none"><h3>LEIBNITZ</h3></a>
+          <a href="detail.html" class="text-decoration-none"><h3>Leibnitz</h3></a>
           <p class="description">ANZURES, MIGUEL HIDALGO, CIUDAD DE MÉXICO</p>
           <p class="mb-0">$ 49,500 MXN</p>
         </div>
@@ -186,7 +186,7 @@
           </a>
         </div>
         <div class="result-text-box mt-0">
-          <a href="detail.html" class="text-decoration-none"><h3>CASA EN RENTA EN HUIXQUILUCAN</h3></a>
+          <a href="detail.html" class="text-decoration-none"><h3>Casa en renta en Huixquilucan</h3></a>
           <p class="description">SAN BARTOLOMÉ COATEPEC, HUIXQUILUCAN, ESTADO DE MÉXICO</p>
           <p class="mb-0">$ 19,500 MXN</p>
         </div>
@@ -219,7 +219,7 @@
           </a>
         </div>
         <div class="result-text-box mt-0"> 
-          <a href="detail.html" class="text-decoration-none"><h3>CASA EN RENTA J.PANI CD. SATELITE</h3></a>
+          <a href="detail.html" class="text-decoration-none"><h3>Casa en renta CD. Satelite</h3></a>
           <p class="description">CIUDAD SATÉLITE, NAUCALPAN DE JUÁREZ, ESTADO DE MÉXICO</p>
           <p class="mb-0">$ 35,000 MXN</p>
         </div>
@@ -253,7 +253,7 @@
         </div>
         <div class="result-text-box mt-0"> 
           <a href="detail.html" class="text-decoration-none"><h3>Propiedad 784512</h3></a>
-          <p class="description">BOSQUES DE LA HERRADURA, HUIXQUILUCAN, ESTADO DE MÉXICO</p>
+          <p class="description">Bosques de la Herradura, Estado de Mexico</p>
           <p class="mb-0">$ 35,000 MXN</p>
         </div>
       </div>
@@ -285,7 +285,7 @@
           </a>
         </div>
         <div class="result-text-box mt-0"> 
-          <a href="detail.html" class="text-decoration-none"><h3>CASA RENTA FONTANA RESIDENCIAL</h3></a>
+          <a href="detail.html" class="text-decoration-none"><h3>Casa en renta en Fontana residencial</h3></a>
           <p class="description">PRIVADA LOS FRANCISCANOS, SANTIAGO, NUEVO LEÓN</p>
           <p class="mb-0">$ 27,500 MXN</p>
         </div>
