Naming index.html

--- a/result.html
+++ b/result.html
@@ -18,7 +18,7 @@
             <h5 class="white">Root it</h5>
         </div>
         <div class="navbar-icons-box">
-            <a href="home.html"><i class="fas fa-search white"><span class="d-none-sm-lg white">SEARCH</span></i></a>
+            <a href="index.html"><i class="fas fa-search white"><span class="d-none-sm-lg white">SEARCH</span></i></a>
             <a href="result.html"><i class="fas fa-poll white"><span class="d-none-sm-lg white">TREND</span></i></a>
         </div>
     </nav>    
