Fixing webhint errors

--- a/detail.html
+++ b/detail.html
@@ -143,7 +143,7 @@
                 <div class="video-box col- col-xl-6">
                     <h3>Video</h3>
                     <div class="video">
-                        <iframe class="w-100 m-auto" src="https://www.youtube.com/embed/BWB4UF9fLyQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe class="w-100 m-auto" src="https://www.youtube.com/embed/BWB4UF9fLyQ" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>       
             </div>
@@ -151,7 +151,7 @@
                 <div  class="location-box col- col-xl-6">
                     <h3>Location</h3>
                     <div class="google-map">
-                        <iframe class="w-100 m-auto" src="https://maps.google.com/maps?q=Calle%20Ej%C3%A9rcito%20Mexicano%20319%2C%20Luis%20Echeverr%C3%ADa%2C%2094298%20Veracruz%2C%20Ver.&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+                        <iframe class="w-100 m-auto" src="https://maps.google.com/maps?q=Calle%20Ej%C3%A9rcito%20Mexicano%20319%2C%20Luis%20Echeverr%C3%ADa%2C%2094298%20Veracruz%2C%20Ver.&t=&z=13&ie=UTF8&iwloc=&output=embed"></iframe>
                     </div>
                 </div>
                 <div class="send-message-box col- col-xl-6">
