--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <option value="3">Merida</option>
                         <option value="3">Veracruz</option>
                     </select>
-                    <a href="result.html"><button class="white" type="submit">SEARCH</button></a>
+                    <div class="search-button"><a href="result.html" class="white text-decoration-none">SEARCH</a></div>
                 </div>
             </div>
         </div>
