--- a/result.html
+++ b/result.html
@@ -27,7 +27,7 @@
     <h1>Welcome to your new home.</h1>
     <div class="row results-main-box m-auto">
       <div class="result-1 results col- col-md-6 col-xl-4">
-        <div id="house-1" class="carousel slide" data-interval="false"">
+        <div id="house-1" class="carousel slide" data-interval="false">
           <ol class="carousel-indicators">
             <li data-target="#house-1" data-slide-to="0" class="active"></li>
             <li data-target="#house-1" data-slide-to="1"></li>
@@ -60,7 +60,7 @@
         </div>
       </div>
       <div class="result-2 results col- col-md-6 col-xl-4">
-        <div id="house-2" class="carousel slide" data-interval="false"">
+        <div id="house-2" class="carousel slide" data-interval="false">
           <ol class="carousel-indicators">
             <li data-target="#house-2" data-slide-to="0" class="active"></li>
             <li data-target="#house-2" data-slide-to="1"></li>
@@ -93,7 +93,7 @@
         </div>
       </div>
       <div class="result-3 results col- col-md-6 col-xl-4">
-        <div id="house-3" class="carousel slide" data-interval="false"">
+        <div id="house-3" class="carousel slide" data-interval="false">
           <ol class="carousel-indicators">
             <li data-target="#house-3" data-slide-to="0" class="active"></li>
             <li data-target="#house-3" data-slide-to="1"></li>
@@ -126,7 +126,7 @@
         </div>
       </div>
       <div class="result-4 results col- col-md-6 col-xl-4">
-        <div id="house-4" class="carousel slide" data-interval="false"">
+        <div id="house-4" class="carousel slide" data-interval="false">
           <ol class="carousel-indicators">
             <li data-target="#house-4" data-slide-to="0" class="active"></li>
             <li data-target="#house-4" data-slide-to="1"></li>
@@ -159,7 +159,7 @@
         </div>
       </div>
       <div class="result-5 results col- col-md-6 col-xl-4">
-        <div id="house-5" class="carousel slide" data-interval="false"">
+        <div id="house-5" class="carousel slide" data-interval="false">
           <ol class="carousel-indicators">
             <li data-target="#house-5" data-slide-to="0" class="active"></li>
             <li data-target="#house-5" data-slide-to="1"></li>
@@ -192,7 +192,7 @@
         </div>
       </div>
       <div class="result-6 results col- col-md-6 col-xl-4">
-        <div id="house-6" class="carousel slide" data-interval="false"">
+        <div id="house-6" class="carousel slide" data-interval="false">
           <ol class="carousel-indicators">
             <li data-target="#house-6" data-slide-to="0" class="active"></li>
             <li data-target="#house-6" data-slide-to="1"></li>
@@ -225,7 +225,7 @@
         </div>
       </div>
       <div class="result-7 results col- col-md-6 col-xl-4">
-        <div id="house-7" class="carousel slide" data-interval="false"">
+        <div id="house-7" class="carousel slide" data-interval="false">
           <ol class="carousel-indicators">
             <li data-target="#house-7" data-slide-to="0" class="active"></li>
             <li data-target="#house-7" data-slide-to="1"></li>
@@ -258,7 +258,7 @@
         </div>
       </div>
       <div class="result-8 results col- col-md-6 col-xl-4">
-        <div id="house-8" class="carousel slide" data-interval="false"">
+        <div id="house-8" class="carousel slide" data-interval="false">
           <ol class="carousel-indicators">
             <li data-target="#house-8" data-slide-to="0" class="active"></li>
             <li data-target="#house-8" data-slide-to="1"></li>
