Adding right width to a detail img

--- a/detail.html
+++ b/detail.html
@@ -43,7 +43,7 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item detail-carousel-item active">
-                        <img src="css/images/houses/house-1/1.jpg" class="d-block p-0 m-0" alt="...">
+                        <img src="css/images/houses/house-1/1.jpg" class="d-block p-0 m-0 w-100" alt="...">
                     </div>
                     <div class="carousel-item detail-carousel-item">
                         <img src="css/images/houses/house-1/2.jpg" class="d-block p-0 m-0 w-100" alt="...">
